@@ -1,5 +1,17 @@
 2010-07-05  Maciej W. Rozycki  <macro@codesourcery.com>
 
+	* gas/mips/mips4-fp.d, gas/mips/mips4-fp.s: Remove checks for
+	branch-likely instructions and place them...
+	* gas/mips/mips4-branch-likely.d, gas/mips/mips4-branch-likely.s:
+	... in this new test.
+	* gas/mips/mips4-fp.l: Update accordingly.
+	* gas/mips/mips4-branch-likely.l: New stderr output for the new
+	test.
+	* gas/mips/mips.exp (mips4-branch-likely): Run a dump test and
+	a list test with mips4-branch-likely similarly to mips4-fp.
+
+2010-07-05  Maciej W. Rozycki  <macro@codesourcery.com>
+
 	* gas/mips/beq.d, gas/mips/beq.s: Remove checks for
 	branch-likely instructions.
 	* gas/mips/bge.d, gas/mips/bge.s: Likewise.
